[package]
name        = "session_log"
version     = "0.1.5"
edition     = "2021"
license     = "MIT"
repository  = "https://githib.com/tnthung/session_log"
description = "A simple session log library for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid      = "1.8.0"
chrono    = "0.4.38"
once_cell = "1.19.0"
